Fix spacing between meta boxes on the Edit Gig screen.

--- a/admin/less/modules/gigs.less
+++ b/admin/less/modules/gigs.less
@@ -23,6 +23,10 @@
 	width: calc(50% ~"-" 10px);
 }
 
+.audiotheme-gig-date-picker {
+	margin-bottom: 20px;
+}
+
 .audiotheme-gig-time-picker {
 	width: 100%;
 
@@ -52,6 +56,7 @@
 
 #audiotheme-gig-note-meta-box {
 	clear: both;
+	margin-bottom: 0;
 
 	#excerpt {
 		margin: 0 0 6px 0;
